--- a/css/main.scss
+++ b/css/main.scss
@@ -57,23 +57,6 @@ footer, section {
     }
 }
 
-.btn {
-    text-align: center;
-    border: 0;
-    color: #fff;
-    font-size: 0.8em;
-    text-decoration: none;
-    padding: 10px 15px;
-    background-color: $color-link;
-    @include border-radius(5px);
-    @include transition(background-color, 0.3s, ease);
-
-    &:hover,
-    &:focus {
-        background-color: $color-linkvisited;
-    }
-}
-
 header {
     background: url(../img/newyork.jpg) no-repeat 50% 100%;
     color: #fff;
@@ -118,6 +101,51 @@ header {
     }
 }
 
+h2,
+section#blog > article:first-of-type > h3 {
+    font-weight: 500;
+    font-size: 1.3em;
+    
+    span {
+        text-transform: uppercase;
+        display: block;
+        font-size: 0.5em;
+        color: lighten($color-primary, 30%);
+    }
+}
+
+a {
+    @include transition(color, 0.3s, ease);
+    color: $color-link;
+
+    &:visited {
+        color: $color-linkvisited;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+        text-decoration: none;
+    }
+}
+
+.btn {
+    text-align: center;
+    border: 0;
+    color: #fff;
+    font-size: 0.8em;
+    text-decoration: none;
+    padding: 10px 15px;
+    background-color: $color-link;
+    @include border-radius(5px);
+    @include transition(background-color, 0.3s, ease);
+
+    &:hover,
+    &:focus {
+        background-color: $color-linkvisited;
+    }
+}
+
 section {
     margin: ($gutter-width / 2 ) auto;
     @media screen and (min-width: $break-small) and (max-width: $break-large) {
@@ -126,17 +154,6 @@ section {
 
     @media screen and (min-width: $break-large) {
         width: $width-large;
-    }
-
-    h2 {
-        font-weight: 500;
-        
-        span {
-            text-transform: uppercase;
-            display: block;
-            font-size: 0.5em;
-            color: lighten($color-primary, 30%);
-        }
     }
 
     &#developers {
@@ -161,6 +178,70 @@ section {
 
             @media screen and (min-width: $break-large) {
                 width: ($column-width * 3) + ($gutter-width * 2);
+            }
+        }
+    }
+
+    &#blog {
+        border-top: 1px solid lighten($color-primary, 50%);
+
+        ul {
+            float: left;
+            list-style: none;
+            padding: 0;
+            margin: 0 0 $gutter-width 0;
+
+            @media screen and (min-width: $break-large) {
+                width: ($column-width * 2) + ($gutter-width * 1);
+                margin-left: $gutter-width;
+            }
+
+            li {
+                padding: 0;
+                margin: 0;
+                line-height: 1.5;
+            }
+
+            li:last-child {
+                margin-top: 1em;
+            }
+        }
+
+        article:first-of-type {
+            float: left;
+            @media screen and (min-width: $break-large) {
+                width: ($column-width * 4) + ($gutter-width * 3);
+            }
+
+            h3 {
+                margin-top: 0;
+            }
+        }
+
+        h2 {
+            margin-bottom: 0;
+        }
+    }
+
+    &#about {
+        border-top: 1px solid lighten($color-primary, 50%);
+
+        div#platform {
+            float: left;
+            @media screen and (min-width: $break-small) and (max-width: $break-large) {
+                width: ($column-width * 2) + ($gutter-width * 1);
+            }
+
+            @media screen and (min-width: $break-large) {
+                width: ($column-width * 4) + ($gutter-width * 3);
+            }
+        }
+
+        div#devs {
+            float: left;
+            @media screen and (min-width: $break-small) {
+                margin-left: $gutter-width;
+                width: ($column-width * 2) + ($gutter-width * 1);
             }
         }
     }
