--- a/css/main.scss
+++ b/css/main.scss
@@ -7,8 +7,7 @@ $gutter-width: 30px;
 $font-stack: 'Open Sans', sans-serif;
 
 $width-small: ($column-width * 4 + $gutter-width * 4);
-$width-large: ($column-width * 6 + $gutter-width * 6
-    );
+$width-large: ($column-width * 6 + $gutter-width * 6);
 
 $margin-big: $gutter-width * 5;
 $margin-medium: $gutter-width * 3;
@@ -17,6 +16,14 @@ $margin-small: $gutter-width;
 $color-primary: #444;
 $color-link: #006892;
 $color-linkvisited: darken($color-link, 10%);
+
+@mixin clear-float() {
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+}
 
 @mixin transition($property, $time, $function) {
     -moz-transition: $property $time $function;
@@ -44,17 +51,34 @@ body {
     margin: 0;
 }
 
-footer, section {
-    clear: both;
-    margin: 0 auto;
-    margin: ($gutter-width) auto;
+section {
+    @include clear-float();
+    &:nth-child(odd) {
+        background-color: lighten($color-primary, 70%);
+    }
     padding: ($gutter-width) 0;
+}
+
+.row {
+    @include clear-float();
+    // clear: both;
+    margin: 0 auto;
+    padding: ($gutter-width) ($gutter-width / 2);
+
     @media screen and (min-width: $break-small) and (max-width: $break-large) {
         width: $width-small;
     }
 
     @media screen and (min-width: $break-large) {
         width: $width-large;
+    }
+
+    .item {
+        margin-left: $gutter-width;
+    }
+
+    .item:first-child {
+        margin-left: $gutter-width / 2;
     }
 }
 
@@ -119,8 +143,7 @@ header {
     }
 }
 
-h2,
-section#blog > article:first-of-type > h3 {
+h2 {
     font-weight: 500;
     font-size: 1.3em;
     
@@ -168,119 +191,91 @@ a {
     }
 }
 
-section {
-    margin: ($gutter-width / 2 ) auto;
+div#communities,
+div#developers {
+    float: left;
+
     @media screen and (min-width: $break-small) and (max-width: $break-large) {
-        width: $width-small;
+        width: ($column-width * 2) + ($gutter-width * 1);
     }
 
     @media screen and (min-width: $break-large) {
-        width: $width-large;
+        width: ($column-width * 3) + ($gutter-width * 2);
     }
+}
 
-    div#communities,
-    div#developers {
-        float: left;
-        margin: 0 ($gutter-width/2);
+section#blog {
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
 
-        h2, p {
-            @media screen and (min-width: $break-small) and (max-width: $break-large) {
-                width: ($column-width * 2) + ($gutter-width * 1);
-            }
+        li {
+            padding: 0;
+            margin: 0;
+            line-height: 1.5;
+        }
 
-            @media screen and (min-width: $break-large) {
-                width: ($column-width * 3) + ($gutter-width * 2);
-            }
+        li:last-child {
+            margin-top: 1em;
         }
     }
 
-    &#blog {
-        border-top: 1px solid lighten($color-primary, 50%);
-        padding-left: $gutter-width/2;
+    div.archive {
+        @media screen and (min-width: $break-large) {
+            float: left;
+            width: ($column-width * 2) + ($gutter-width * 1);
+        }
+    }
 
+    div.latest {
+        @media screen and (min-width: $break-large) {
+            float: left;
+            width: ($column-width * 4) + ($gutter-width * 3);
+        }
+    }
+}
+
+section#about {
+    div#platform {
+        @media screen and (min-width: $break-small) and (max-width: $break-large) {
+            width: ($column-width * 2) + ($gutter-width * 1);
+        }
+
+        @media screen and (min-width: $break-large) {
+            width: ($column-width * 4) + ($gutter-width * 3);
+        }
+    }
+
+    div#devs {
         ul {
             list-style: none;
+            margin: 0;
             padding: 0;
-            margin: 0 0 $gutter-width 0;
-
-
-            @media screen and (min-width: $break-large) {
-                float: left;
-                width: ($column-width * 2) + ($gutter-width * 1);
-                margin-left: $gutter-width;
-            }
+            -moz-column-count: 2;
+            -moz-column-gap: $gutter-width;
+            -webkit-column-count: 2;
+            -webkit-column-gap: $gutter-width;
+            column-count: 2;
+            column-gap: $gutter-width;
 
             li {
                 padding: 0;
-                margin: 0;
-                line-height: 1.5;
-            }
+                display: block;
+                clear: both;
 
-            li:last-child {
-                margin-top: 1em;
-            }
-        }
-
-        article:first-of-type {
-
-            @media screen and (min-width: $break-large) {
-                float: left;
-                width: ($column-width * 4) + ($gutter-width * 3);
-            }
-
-            h3 {
-                margin-top: 0;
-            }
-        }
-
-        h2 {
-            margin-bottom: 0;
-        }
-    }
-
-    &#about {
-        border-top: 1px solid lighten($color-primary, 50%);
-
-        div#platform {
-            @media screen and (min-width: $break-small) and (max-width: $break-large) {
-                width: ($column-width * 2) + ($gutter-width * 1);
-            }
-
-            @media screen and (min-width: $break-large) {
-                width: ($column-width * 4) + ($gutter-width * 3);
-            }
-        }
-
-        div#devs {
-            ul {
-                list-style: none;
-                margin: 0;
-                padding: 0;
-                -moz-column-count: 2;
-                -moz-column-gap: $gutter-width;
-                -webkit-column-count: 2;
-                -webkit-column-gap: $gutter-width;
-                column-count: 2;
-                column-gap: $gutter-width;
-
-                li {
-                    padding: 0;
-                    display: block;
-                    clear: both;
-
-                    &:first-child {
-                        h3 {
-                            margin-top: 0;
-                        }
+                &:first-child {
+                    h3 {
+                        margin-top: 0;
                     }
+                }
 
-                    img {
-                        width: 100px;
-                        height: 100px;
-                        @include border-radius(50px);
-                        float: left;
-                        margin-right: $gutter-width / 2;
-                    }
+                img {
+                    width: 100px;
+                    height: 100px;
+                    @include border-radius(50px);
+                    float: left;
+                    margin-right: $gutter-width / 2;
                 }
             }
         }
@@ -290,7 +285,6 @@ section {
 footer {
     border-top: 1px solid lighten($color-primary, 50%);
     color: lighten($color-primary, 20%);
-    margin-top: $margin-big;
-    padding: ($gutter-width / 2);
     font-size: 0.8em;
+    text-align: center;
 }
