--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <nav>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/communities/">Communities</a></li>
-        <li><a href="/developers/">Developers</a></li>
-        <li><a href="/blog/">Blog</a></li>
-        <li><a href="/tutorials/">Tutorials</a></li>
+        <li><a href="{{site.url}}">Home</a></li>
+        <li><a href="{{site.url}}communities/">Communities</a></li>
+        <li><a href="{{site.url}}developers/">Developers</a></li>
+        <li><a href="{{site.url}}blog/">Blog</a></li>
+        <li><a href="{{site.url}}tutorials/">Tutorials</a></li>
     </ul>
 </nav>
