--- a/css/main.scss
+++ b/css/main.scss
@@ -198,6 +198,14 @@ h2 {
     }
 }
 
+h3 {
+    margin-bottom: 0.5em;
+}
+
+p {
+    margin-top: 0;
+}
+
 a {
     @include transition(color, 0.3s, ease);
     color: $color-link;
@@ -413,4 +421,32 @@ footer {
     color: lighten($color-primary, 20%);
     font-size: 0.8em;
     text-align: center;
+    padding-top: 1em;
+}
+
+ul.next-links {
+    padding: 0 !important;
+    margin-top: 0;
+
+    li {
+        list-style: none;
+        border: 0 solid $color-link;
+        border-width: 1px 1px 0 1px;
+        margin: 0;
+        padding: 10px; 
+
+        &:first-child {
+            @include border-radius(5px 5px 0 0);
+        }
+
+        &:last-child {
+            @include border-radius(0 0 5px 5px);
+            border-bottom-width: 1px;
+        }
+
+        &:first-child:last-child {
+            @include border-radius(5px);
+            border-bottom-width: 1px;
+        }
+    }
 }
