Create category tutorial

--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -11,7 +11,7 @@ layout: default
 
 <section>
     <div class="content">
-        <article class="row">
+        <article class="row tutorial">
             <h2>{{ page.title }}</h2>
             {{ content }}
         </article>
