--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{site.url}}build/css/octicons/octicons.css">
+        <link rel="stylesheet" href="{{site.url}}build/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{site.url}}build/css/global.css">
+        <link rel="stylesheet" href="{{site.url}}build/css/syntax.css">
 
     </head>
     <body>
