--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,6 +4,6 @@
         <li><a href="{{site.url}}communities/">Communities</a></li>
         <li><a href="{{site.url}}developers/">Developers</a></li>
         <li><a href="{{site.url}}blog/">Blog</a></li>
-        <li><a href="{{site.url}}tutorials/">Tutorials</a></li>
+        <li><a href="{{site.url}}help/">Help</a></li>
     </ul>
 </nav>
