--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -3,15 +3,15 @@ layout: default
 ---
 
 <header>
-    {% include nav.html %}
-    <div class="hero">
+    <div class="container">
+        {% include nav.html %}
         <h1>Blog</h1>
         <p>Read about what we've been up to recently</p>
     </div>
 </header>
 
 <section>
-    <div class="content">
+    <div class="container">
         {{ content }}
     </div>
 </section>
