--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,10 @@ layout: blog
 ---
 
 <article class="row">
-    <h2>{{ page.title }}</h2>
-    <p class="meta">Published on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="published">{{ page.date | date_to_long_string }}</time></p>
+    <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+        <h2>{{ page.title }}</h2>
+        <p class="meta">Published on <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="published">{{ page.date | date_to_long_string }}</time></p>
 
-    {{ content }}
+        {{ content }}
+    </div>
 </article>
