Project API docs

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,5 +5,6 @@
         <li><a href="{{site.url}}developers/">Developers</a></li>
         <li><a href="{{site.url}}blog/">Blog</a></li>
         <li><a href="{{site.url}}help/">Help</a></li>
+        <li><a href="{{site.url}}docs/">API Docs</a></li>
     </ul>
 </nav>
