--- a/css/main.scss
+++ b/css/main.scss
@@ -372,6 +372,7 @@ ul.tutorial-links {
         p {
             font-size: 16px;
             padding-left: 23px;
+            margin-bottom: 0;
         }
     }
 }
