--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,12 @@
 <nav>
-    <ul>
-        <li><a href="{{site.url}}">Home</a></li>
-        <li><a href="{{site.url}}communities/">Communities</a></li>
-        <li><a href="{{site.url}}developers/">Developers</a></li>
-        <li><a href="{{site.url}}blog/">Blog</a></li>
-        <li><a href="{{site.url}}help/">Help</a></li>
-        <li><a href="{{site.url}}docs/">API Docs</a></li>
-    </ul>
+    <div class="container">
+        <ul>
+            <li><a href="{{site.url}}">Home</a></li>
+            <li><a href="{{site.url}}communities/">Communities</a></li>
+            <li><a href="{{site.url}}developers/">Developers</a></li>
+            <li><a href="{{site.url}}blog/">Blog</a></li>
+            <li><a href="{{site.url}}help/">Help</a></li>
+            <li><a href="{{site.url}}docs/">API Docs</a></li>
+        </ul>    
+    </div>
 </nav>
