--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,8 +5,12 @@ layout: default
 <header>
     <div class="container">
         {% include nav.html %}
-        <h1>Blog</h1>
-        <p>Read about what we've been up to recently</p>
+        <div class="row">
+            <div class="col-sm-6">
+                <h1>Blog</h1>
+                <p>Read about what we've been up to recently</p>
+            </div>
+        </div>
     </div>
 </header>
 
