--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,28 @@
         {{ content }}
 
         <footer>
-            <p>Created by the <a href="http://www.ucl.ac.uk/excites">Excites Research Group</a> &bull; <a href="https://groups.google.com/d/forum/opencommunitymaps">Join our mailing list</a> &bull; <a href="https://github.com/ExCiteS/opencommunitymaps">Contribute on Github</a></p> 
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-3">
+                        Created in London <br>by <a href="http://www.ucl.ac.uk/excites">Extreme Citizen Science Research Group</a>.
+                    </div>
+                    <div class="col-sm-2">
+                        <ul>
+                            <li><a href="{{site.url}}blog/">Blog</a></li>
+                            <li><a href="{{site.url}}help/">Help</a></li>
+                            <li><a href="{{site.url}}docs/">API Docs</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3">
+                        <ul>
+                            <li><a href="https://github.com/ExCiteS/opencommunitymaps">View project on Github</a></li>
+                            <li><a href="https://github.com/ExCiteS/opencommunitymaps/issues/new">Report an Issue</a></li>
+                            <li><a href="https://groups.google.com/d/forum/opencommunitymaps">Mailing List</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- <p>Created  &bull; <a href="https://groups.google.com/d/forum/opencommunitymaps">Join our mailing list</a> &bull; <a href="https://github.com/ExCiteS/opencommunitymaps">Contribute on Github</a></p>  -->
         </footer>
     </body>
 </html>
