--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -5,7 +5,11 @@ layout: default
 <header>
     <div class="container">
         {% include nav.html %}
-        <h1>API docs</h1>
+        <div class="row">
+            <div class="col-sm-6">
+                <h1>API docs</h1>
+            </div>
+        </div>
     </div>
 </header>
 
