--- a/css/main.scss
+++ b/css/main.scss
@@ -160,7 +160,7 @@ h2 {
     
     span {
         text-transform: uppercase;
-        display: block;
+        display: block !important;
         font-size: 12px;
         color: lighten($color-primary, 30%);
         margin-bottom: 5px;
@@ -197,12 +197,6 @@ a {
     }
 }
 
-img {
-    -webkit-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
-    -moz-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
-    box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
-}
-
 .btn {
     text-align: center;
     border: 0;
@@ -211,11 +205,11 @@ img {
     padding: 10px 15px;
     background-color: $color-link;
     @include border-radius(5px);
-    @include transition(background-color, 0.3s, ease);
 
     &:link {
         text-decoration: none;
         color: #fff;
+        @include transition(background-color, 0.3s, ease);
     }
 
     &:visited {
@@ -226,6 +220,12 @@ img {
     &:focus {
         background-color: $color-linkvisited;
     }
+}
+
+img {
+    -webkit-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
+    -moz-box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
+    box-shadow: 1px 1px 5px 3px rgba(0,0,0,0.2);
 }
 
 .centered {
@@ -343,17 +343,6 @@ section#about {
     }
 }
 
-div#run-service,
-div#build-app,
-div#github-fork,
-div#github-issue {
-    h2 {
-        span {
-            display: block;
-        }
-    }
-}
-
 footer {
     background-color: $color-primary;
     color: lighten($color-primary, 70%);
@@ -407,7 +396,7 @@ ul.tutorial-links {
 
         p {
             font-size: 16px;
-            padding-left: 0px;
+            text-indent: 0;
             margin-bottom: 0;
         }
     }
@@ -422,7 +411,7 @@ ul.next-links {
         border: 0 solid $color-link;
         border-width: 1px 1px 0 1px;
         margin: 0;
-        padding: ($margin/2) $margin;
+        padding: ($margin/2) $margin ($margin/2) ($margin * 2.5);
 
         &:first-child {
             @include border-radius(5px 5px 0 0);
