--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,12 @@
 <nav>
     <div class="container">
         <ul>
-            <li><a href="{{site.url}}">Home</a></li>
-            <li><a href="{{site.url}}communities/">Communities</a></li>
-            <li><a href="{{site.url}}developers/">Developers</a></li>
-            <li><a href="{{site.url}}blog/">Blog</a></li>
-            <li><a href="{{site.url}}help/">Help</a></li>
-            <li><a href="{{site.url}}docs/">API Docs</a></li>
+            <li id="nav-home"><a href="{{site.url}}">Home</a></li>
+            <li id="nav-communities"><a href="{{site.url}}communities/">Communities</a></li>
+            <li id="nav-developers"><a href="{{site.url}}developers/">Developers</a></li>
+            <li id="nav-blog"><a href="{{site.url}}blog/">Blog</a></li>
+            <li id="nav-help"><a href="{{site.url}}help/">Help</a></li>
+            <li id="nav-docs"><a href="{{site.url}}docs/">API Docs</a></li>
         </ul>    
     </div>
 </nav>
