--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<header>
+<header id="header-blog">
+    {% include nav.html %}
     <div class="container">
-        {% include nav.html %}
         <div class="row">
             <div class="col-sm-6">
                 <h1>Blog</h1>
