--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<header>
+<header id="header-docs">
     <div class="container">
         {% include nav.html %}
         <div class="row">
