--- a/css/main.scss
+++ b/css/main.scss
@@ -96,6 +96,16 @@ header {
         }
     }
 
+    &#header-home #nav-home a,
+    &#header-communities #nav-communities a,
+    &#header-developers #nav-developers a,
+    &#header-help #nav-help a,
+    &#header-docs #nav-docs a,
+    &#header-blog #nav-blog a {
+        border-bottom: 3px solid #ff5c00;
+        @include border-radius(3px 3px 0 0);
+    }
+
     h1 {
         margin: 0;
         font-size: 40px;
