--- a/css/main.scss
+++ b/css/main.scss
@@ -61,6 +61,17 @@ header {
     background-color: $color-link;
     padding-bottom: $margin * 4;
 
+    a.brand {
+        color: #fff;
+        font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+        display: inline-block;
+        float: left;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 30px;
+        margin-top: 7px;
+    }
+
     nav {
         font-family: $font-stack;
         font-size: 14px;
@@ -68,7 +79,7 @@ header {
         padding: ($margin / 2) 0;
         text-transform: none;
         letter-spacing: 0;
-        margin: 0 auto;
+        margin: 0 auto $gutter-width auto;
 
         ul {
             padding: 0;
@@ -121,21 +132,17 @@ header {
     }
 
     &.main {
-        background: url(../img/newyork.jpg) no-repeat 50% 100%;
-        text-align: center;
+        background: url(../img/people.jpg) no-repeat 50% 100%;
+        background-size: cover;
         padding-bottom: $margin;
 
         p {
             font-size: 25px;
-            border-bottom: 3px solid #fff;
             text-transform: uppercase;
         }
 
         div.hero {
-            display: inline-block;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: $margin * 2;
-            margin: 0 auto;
+            text-shadow: 0 0 10px #000000;
         }
 
         nav {
@@ -145,6 +152,7 @@ header {
 
 
     @media screen and (min-width: $break-small) {
+
         &.main {
             padding-bottom: $margin * 4;
 
