Fixed lists CSS

--- a/css/main.scss
+++ b/css/main.scss
@@ -290,14 +290,8 @@ article.row {
 
     ul {
         li {
-            list-style: none;
-            text-indent: -15px;
+            list-style: square;
             margin-bottom: 7px;
-            &:before{
-                content: "—";
-                position: relative;
-                left: -10px;
-            }
         }
     }
 }
@@ -438,10 +432,10 @@ ul.next-links {
     margin-top: 0;
 
     li {
-        list-style: none;
+        list-style: none !important;
         border: 0 solid $color-link;
         border-width: 1px 1px 0 1px;
-        margin: 0;
+        margin: 0 !important;
         padding: ($margin/2) $margin ($margin/2) ($margin * 2.5);
 
         &:first-child {
