Fixed min-width margins

--- a/css/main.scss
+++ b/css/main.scss
@@ -50,6 +50,10 @@ body {
     margin: 0;
 }
 
+div.row > div {
+    margin-bottom: 30px;
+}
+
 section {
     @include clear-float();
     @include stripes();
