--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{site.url}}build/css/octicons/octicons.css">
-        <link rel="stylesheet" href="{{site.url}}build/css/bootstrap.min.css">
-        <link rel="stylesheet" href="{{site.url}}build/css/global.css">
-        <link rel="stylesheet" href="{{site.url}}build/css/syntax.css">
+        <link rel="stylesheet" href="/build/css/octicons/octicons.css">
+        <link rel="stylesheet" href="/build/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/build/css/global.css">
+        <link rel="stylesheet" href="/build/css/syntax.css">
 
     </head>
     <body>
