--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,12 +1,12 @@
 <nav>
     <div class="container">
-        <a href="{{site.url}}" class="brand">GeoKey</a>
+        <a href="/" class="brand">GeoKey</a>
         <ul role="nav">
-            <li id="nav-communities"><a href="{{site.url}}communities/">Communities</a></li>
-            <li id="nav-developers"><a href="{{site.url}}developers/">Developers</a></li>
-            <li id="nav-blog"><a href="{{site.url}}blog/">Blog</a></li>
-            <li id="nav-help"><a href="{{site.url}}help/">Help</a></li>
-            <li id="nav-docs"><a href="{{site.url}}docs/">API Docs</a></li>
+            <li id="nav-communities"><a href="/communities/">Communities</a></li>
+            <li id="nav-developers"><a href="/developers/">Developers</a></li>
+            <li id="nav-blog"><a href="/blog/">Blog</a></li>
+            <li id="nav-help"><a href="/help/">Help</a></li>
+            <li id="nav-docs"><a href="/docs/">API Docs</a></li>
         </ul>
     </div>
 </nav>
